--- a/valokuvaus/luontokuvat/kesa/_posts/2015-07-14-00077.md
+++ b/valokuvaus/luontokuvat/kesa/_posts/2015-07-14-00077.md
@@ -8,13 +8,11 @@ redirect_from:
   - /luontokuvat/kesa/00077
 ---
 
-*Voit ostaa täyden resoluution kuvat ilman vesileimaa https://500px.com/minimuutticom/galleries/starworts sivustolta.*
+*Voit ostaa täyden resoluution kuvat ilman vesileimaa [500px.com](https://500px.com/minimuutticom/galleries/starworts) sivustolta.*
 
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAA0zD8Es_hx0ejek3kpI7o5a/luontokuvat/kes%C3%A4/9/DS22931-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAD8LfRRbAHIofWiw_5MCC4Wa/luontokuvat/kes%C3%A4/9/DS22931.jpg)
 
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACxgzHLKR2HZxnM91oWt-fFa/luontokuvat/kes%C3%A4/9/DS22929-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACflGNvdyXRSqAhl3Jrj8Lra/luontokuvat/kes%C3%A4/9/DS22929.jpg)
-
-[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAqsIM0ThRTtqbDT0-6Yxsia/luontokuvat/kes%C3%A4/5/DS23190-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADtv1RZ2IzDYkF0c7u3TGmHa/luontokuvat/kes%C3%A4/5/DS23190.jpg)
 
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAC5D-qlTmVFGQ1oRQItK98oa/luontokuvat/kes%C3%A4/4/DS21459-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABtLPUb4GRMlU1BQFz8K61Za/luontokuvat/kes%C3%A4/4/DS21459.jpg)
 
@@ -27,8 +25,6 @@ redirect_from:
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABeXKX8g-9mJI1OpuqblG2Sa/luontokuvat/kes%C3%A4/4/DS21651-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADCcyB8-WtYj2mzwJ7MKENNa/luontokuvat/kes%C3%A4/4/DS21651.jpg)
 
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADkg5e3ufci9-wkIXNb-Hk8a/luontokuvat/kes%C3%A4/4/DS21653-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAonPfe7PAF9JgZdvTV3p8ma/luontokuvat/kes%C3%A4/4/DS21653.jpg)
-
-[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABO4fJh8ijfZFFblUurcG1wa/luontokuvat/kes%C3%A4/4/DS21683-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAA0qqllSAfxCeeZ6NeppnZSa/luontokuvat/kes%C3%A4/4/DS21683.jpg)
 
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAA0cvags5D3fyy2G62ITg1va/luontokuvat/kes%C3%A4/4/DS21583-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAArHqNJ3EqPAjr8yiMAn1ifa/luontokuvat/kes%C3%A4/4/DS21583.jpg)
 
