--- a/aktivointi/_posts/2015-07-11-esterata.md
+++ b/aktivointi/_posts/2015-07-11-esterata.md
@@ -7,7 +7,9 @@ image:
   thumb:
 ---
 
-Tämä esterata on siitä kiva tehtävä, että tähän ei tarvitse olla mitään kalliita agilityesteitä vaan kaikki kotoa löytyvät kevyet tai pehmeät esineet käyvät. Esterata kannattaa kuitenkin tehdä käytävälle tai muuhun kapeaan kohtaan, jotta koira ei tule vaan kiertäneeksi esteitä ulkokautta. 
+Tämä esterata on siitä kiva tehtävä, että tähän ei tarvitse olla mitään kalliita agilityesteitä vaan kaikki kotoa löytyvät kevyet tai pehmeät esineet käyvät.
+
+Esterata kannattaa kuitenkin tehdä käytävälle tai muuhun kapeaan kohtaan, jotta koira ei tule vaan kiertäneeksi esteitä ulkokautta. 
 
 Tehtävässä voi käyttää mm. tyhjiä pahvilaatikoita, tyynyjä, sohvan istuintyynyjä, rahia, ämpäreitä, vateja, viikattua peittoa, vaatteilla täytettyä urheilukassia, rantapalloa, pehmoleluja, pyykkikoria, säilytyskoreja, mattorullaa, yksittäisiä kirjoja lattialla (jonka yli pitää astua) jne.
 
