--- a/aktivointi/_posts/2015-07-11-jakkara.md
+++ b/aktivointi/_posts/2015-07-11-jakkara.md
@@ -7,7 +7,9 @@ image:
   thumb:
 ---
 
-Ikean muovijakkara käy hyvin keskikokoisen tai suuren koiran aktivointileikkeihin. Jakkarassa on korkeat reunat, jotka vaikeuttavat tehtäviä sopivasti. Kun jakkaran kääntää ylösalaisin, niin pohjassa on hyvä lokerikko namien piilottamista varten.
+Ikean muovijakkara käy hyvin keskikokoisen tai suuren koiran aktivointileikkeihin.
+
+Jakkarassa on korkeat reunat, jotka vaikeuttavat tehtäviä sopivasti. Kun jakkaran kääntää ylösalaisin, niin pohjassa on hyvä lokerikko namien piilottamista varten.
 
 Näissä tehtävissä olen käyttänyt nappuloita sekä kuivattuja kanafileen palasia, mutta näissä voi käyttää muitakin herkkuja.
 
