--- a/aktivointi/_posts/2015-07-11-koroke.md
+++ b/aktivointi/_posts/2015-07-11-koroke.md
@@ -7,7 +7,9 @@ image:
   thumb:
 ---
 
-Korokkeena voi käyttää mitä tahansa laatikkoa, lipastoa, pöytää, tuolia tai pahvilaatikoita. Korokkeeksi kannattaa valita vain sellaisia tavaroita, joiden päälle koiralla on muutenkin lupa kiivetä tai nojata tassuillaan. Meillä korokkeena on käytetty vain pahvilaatikoita, koska Mikillä ei ole lupaa kiivetä huonekaluille. Herkkuja ei välttämättä kannata laittaa keittiön pöydän reunalle, mikäli et samalla halua opettaa koiraasi varastamaan ruokaa pöydästä :D
+Korokkeena voi käyttää mitä tahansa laatikkoa, lipastoa, pöytää, tuolia tai pahvilaatikoita.
+
+Korokkeeksi kannattaa valita vain sellaisia tavaroita, joiden päälle koiralla on muutenkin lupa kiivetä tai nojata tassuillaan. Meillä korokkeena on käytetty vain pahvilaatikoita, koska Mikillä ei ole lupaa kiivetä huonekaluille. Herkkuja ei välttämättä kannata laittaa keittiön pöydän reunalle, mikäli et samalla halua opettaa koiraasi varastamaan ruokaa pöydästä :D
 
 Idea tässä on se, että kun koroke on tarpeeksi korkea, koira ei enää suoraan yltä syömään nappuloita tai herkkuja vaan joutuu miettimään millä ylettäisi syömään ne. Koira tulee samalla tehneeksi vähän tasapainoharjoitteluakin - ainakin Miki nousi takatassuilleen tuon korkeimman korokkeen kanssa (harmi etten saanut siitä valokuvaa).
 
