--- a/aktivointi/_posts/2015-07-11-pussukat.md
+++ b/aktivointi/_posts/2015-07-11-pussukat.md
@@ -7,7 +7,7 @@ image:
   thumb:
 ---
 
-Sain idean näihin pussukoihin lahjaksi saamistani Ikean Nordrana säilytyskoreista, jotka käyvät tähän tehtävään yhtä hyvin jos virkkauskoukku tuntuu omaan käteen vieraalta :D
+Sain idean näihin pussukoihin Ikean Nordrana säilytyskoreista, jotka käyvät tähän tehtävään yhtä hyvin, jos virkkauskoukku tuntuu omaan käteen vieraalta :D
 
 Pussukat saattavat tuntua toisista koirista pelottavilta, kun pää pitää työntää pimeään ja kapeaan koloon. Siitä syystä aloitimme mahdollisimman helpolla tehtävällä. Rullasin isomman pussukan reunat alas, avasin pussukan suun kunnolla auki ja laitoin sisälle pari nappulaa ja annoin Mikille luvan etsiä.
 
