--- a/aktivointi/_posts/2015-07-11-ritila.md
+++ b/aktivointi/_posts/2015-07-11-ritila.md
@@ -7,6 +7,8 @@ image:
 
 ---
 
+Ritilät toimivat mainiosti syömistä hidastavina ruokakuppeina.
+
 Tähän voit käyttää kaikenlaisia ritilöitä, esimerkiksi pannunalustaa tai vaikka uuniritilää. Ritilä kannattaa joka tapauksessa antaa koiralle sellaisena päivänä, kun olet muutenkin ollut aikeissa pestä sen. Ihan siksi, että kuolattua ritilää tuskin on enää mukavaa saati sitten hygieenistä käyttää keittiössä.
 
 Asetin siis tämän ritilän lattialle ja ripottelin muutamia nameja sinne väleihin, joka osoittautui Mikille aivan liian helpoksi. Toisella kerralla laitoin ritilän väleihin esteeksi lasten rakennuspalikoita, mutta tehtävä oli silti Mikille liian helppo. 15 namia hävisi suunnilleen 30 sekunnissa.
