--- a/en/activation/_posts/2015-07-20-ball-pool.md
+++ b/en/activation/_posts/2015-07-20-ball-pool.md
@@ -7,7 +7,9 @@ image:
   thumb:
 ---
 
-You can buy expensive ball pool balls from a toy store and pay a fortune, or you can improvise like I did. I bought a bag of water balloons and they cost me next to nothing :)
+You can buy expensive ball pool balls from a toy store and pay a fortune, or you can improvise like I did.
+
+I bought a bag of water balloons and they cost me next to nothing :)
 
 I filled less than 100 balloons with air by using a bicycle pump and put them in a box as a ball pool. Then I sprinkled some kibbles in there and asked Miki to search.
 
