--- a/en/activation/_posts/2015-07-20-pill-jars.md
+++ b/en/activation/_posts/2015-07-20-pill-jars.md
@@ -7,11 +7,13 @@ image:
   thumb:
 ---
 
-You can use any plastic pill jars in this game. The jars need to be washed thoroughly before you give them to your dog, because there can be some traces from the pills inside the jars.
+You can use any plastic pill jars in this game.
 
-You can use any dry treats, I’ve used some kibbles.
+The jars need to be washed thoroughly before you give them to your dog, because there can be some traces from the medical substances.
 
-These games are so easy for Miki, that he gets the kibbles out from a single jar in just seconds. That’s why I always give several jars at the same time.
+You can use any dry treats, I’ve used just kibble.
+
+These games are so easy for Miki, that he gets the kibble out from a single jar in just seconds. That’s why I always give several jars at the same time.
 
 If you have large-mouthed jars, you can put [corals](https://minimuutti.com/en/activation/corals/) or pieces of cloth as obstacles to make the game harder.
 
