--- a/en/activation/_posts/2015-07-20-trivet.md
+++ b/en/activation/_posts/2015-07-20-trivet.md
@@ -8,6 +8,8 @@ image:
 
 ---
 
+Trivets work well as slow feedind bowls.
+
 You can use any kind of trivets, grills or grids for this one. But you may want to give this to your dog on the same day you are about to clean the trivet anyway. A dooled trivet isn't nice or hygienic anymore to be used in the kitchen.
 
 I put the trivet on the floor and sprinkled some treats in the gaps. That game was way too easy for Miki. At the second time I put some kids' building blocks as obstables in between the gaps, but it was still too easy. 15 pieces of treats vanished in about 30 seconds.
