--- a/en/activation/_posts/2015-07-20-lasagna.md
+++ b/en/activation/_posts/2015-07-20-lasagna.md
@@ -7,11 +7,13 @@ image:
   thumb:
 ---
 
-You need a good size cardboard box, a magazine (staples taken out) and some dry treats or kibbles. Separate the pages from the magazine and lay them in the box on top of each other and put the treats in between.
+This game has similar layers as lasagna.
+
+You need a good size cardboard box, a magazine (staples taken out) and some dry treats or kibble. Separate the pages from the magazine and lay them in the box on top of each other and put the treats in between.
 
 Usually it takes Miki about 10 to 15 minutes to find all the treats.
 
-As you can see in last the picture, Miki once took a shortcut and knocked the box over and ate the kibbles from the floor.
+As you can see in last the picture, Miki once took a shortcut and knocked the box over and ate the kibble from the floor.
 
 ---
 
