--- a/en/activation/_posts/2015-07-20-lids.md
+++ b/en/activation/_posts/2015-07-20-lids.md
@@ -7,7 +7,9 @@ image:
   thumb:
 ---
 
-You can use any lids for this game. Small and light weighted lids are usually the easiest for dogs and the larger and heavier lids are the hardest. You can even use an upside down turned dinner plates, but these are extremely hard.
+You can use any lids for this game. Small and light weighted lids are usually the easiest for dogs and the larger and heavier lids are the hardest.
+
+You can even use an upside down turned dinner plates, but these are extremely hard.
 
 When the lids are placed on the carpet, they are easier for the dog to lift and turn. When they are placed on the hard floor, the game becomes harder.
 
