--- a/en/activation/_posts/2015-07-20-toy-hunt.md
+++ b/en/activation/_posts/2015-07-20-toy-hunt.md
@@ -7,8 +7,7 @@ image:
   thumb:
 ---
 
-You may have heard the easter egg hunt game where you hide plastic eggs containing treats for your dog to find. 
-You can also make a similar game as the egg hunt by hiding some food puzzle toys for change.
+You can make a similar game as the easter egg hunt by hiding some food puzzle toys for your dog.
 
 Instead of just giving a food puzzle toy filled with kibble to your dog you can increase the challenge and hide the toy first while your dog waits in some other room.
 
