--- a/en/activation/_posts/2015-07-20-yarn-box.md
+++ b/en/activation/_posts/2015-07-20-yarn-box.md
@@ -7,6 +7,8 @@ image:
   thumb:
 ---
 
+This yarn box is one diy version of a slow feeding food bowl.
+
 For this one you need a cardboard box, masking tape, some yarn, scissors, a needle and any treats or kibbles.
 
 I chose a shoe box and I put one round of masking tape around it to make it stronger. Then I punched several holes at different heights with scissors on both sides of the box. After this I wired many rounds of yarn with a needle through these holes I made, and finally secured it with knots. I used about 5 meters (16 feet) of yarn altogether. 
