--- a/aktivointilelut/_posts/2015-07-12-kong-gyro.md
+++ b/aktivointilelut/_posts/2015-07-12-kong-gyro.md
@@ -13,7 +13,7 @@ Lelua tehdään kahdessa koossa ja tämä kuvissa näkyvä on se isompi (18cm x 
 
 Katselin lelua netissä useaan kertaan ja mietin olisiko lelu sopiva Mikille, koska lelun vaikeustasoa ei valmistajan mukaan ollut mahdollista säätää. Päädyin kuitenkin tilaamaan lelun ja se osoittautui Mikille juuri sopivan haastavaksi. Mikiltä kesti noin 8 minuuttia saada kupillinen nappuloita ulos tästä.
 
-Koska lelun voi avata pesua varten, on sen vaikeustasoa tällöin myös mahdollista säätää :) Lelun sisälle voi laittaa esimerkiksi muovisia pullonkorkkeja tai vaikka tällaisen pienen [korallin](https://minimuutti.com/aktivointi/korallit/), jolloin nappulat eivät putoile ulos niin helposti.
+Koska lelun voi avata pesua varten, on sen vaikeustasoa tällöin myös mahdollista säätää :) Lelun sisälle voi laittaa esimerkiksi muovisia pullonkorkkeja tai vaikka tällaisen pienen [korallin](/aktivointi/korallit/), jolloin nappulat eivät putoile ulos niin helposti.
 
 Olin mielissäni huomatessani, että kerrankin onnistuin löytämään lelun, josta on Mikille edes vähän haastetta. Toiseksi, lelu ei pitänyt matolla juuri minkäänlaista ääntä ja Mikin oli helppo liikutella lelua, joten ehdin jo tykästyä leluun kunnolla. Tämä ilo jäi kuitenkin vähän lyhyeksi...
 
