--- a/en/brain-games/_posts/2015-07-20-pill-jars.md
+++ b/en/brain-games/_posts/2015-07-20-pill-jars.md
@@ -17,7 +17,7 @@ You can use any dry treats, I’ve used just kibble.
 
 These games are so easy for Miki, that he gets the kibble out from a single jar in just seconds. That’s why I always give several jars at the same time.
 
-If you have large-mouthed jars, you can put [corals](https://minimuutti.com/en/brain-games/corals/) or pieces of cloth as obstacles to make the game harder.
+If you have large-mouthed jars, you can put [corals](/en/brain-games/corals/) or pieces of cloth as obstacles to make the game harder.
 
 ---
 
