--- a/en/treat-dispensers/_posts/2015-07-12-kong-gyro.md
+++ b/en/treat-dispensers/_posts/2015-07-12-kong-gyro.md
@@ -13,7 +13,7 @@ Kong manufactures this toy in two sizes and this is the larger one. I like the f
 
 According to manufacturer the difficulty of this toy is not adjustable. Although it gave Miki just the right amount of challenge, because it took him about 8 minutes to get all the kibble out.
 
-Because you can open the toy for cleaning, it means also that you can in fact adjust the difficulty :) If you place some plastic bottle caps or a small [coral](https://minimuutti.com/en/brain-games/corals/) inside the toy, the kibble will be more difficult to get out.
+Because you can open the toy for cleaning, it means also that you can in fact adjust the difficulty :) If you place some plastic bottle caps or a small [coral](/en/brain-games/corals/) inside the toy, the kibble will be more difficult to get out.
 
 At first I was very pleased with this toy. It gave some challenge to Miki, it didn't make almost any noise on the carpet and it was easy for Miki to move around. The joy was short lived..
 
