--- a/en/brain-games/_posts/2015-07-20-ball-pool.md
+++ b/en/brain-games/_posts/2015-07-20-ball-pool.md
@@ -13,7 +13,7 @@ You can buy expensive ball pool balls from a toy store and pay a fortune, or you
 
 I bought a bag of water balloons and they cost me next to nothing :)
 
-I filled less than 100 balloons with air by using a bicycle pump and put them in a box as a ball pool. Then I sprinkled some kibbles in there and asked Miki to search.
+I filled less than 100 balloons with air by using a bicycle pump and put them in a box as a ball pool. Then I sprinkled some kibble in there and asked Miki to search.
 
 Miki loved these balloons so much that he offered me the meercat trick as a compensation in order to get one of those balloons to play with, when I started to fill them :)
 
