--- a/en/brain-games/_posts/2015-07-20-corals.md
+++ b/en/brain-games/_posts/2015-07-20-corals.md
@@ -53,7 +53,7 @@ I put one small treat on the bottom of each cup and then I put the corals on top
 
 ##### Game 4: Giant coral
 
-I wired the corals with yarn and a needle into two long snakes and then I tied them together to make one giant coral. Then I hide some kibbles in the gaps for Miki to find.
+I wired the corals with yarn and a needle into two long snakes and then I tied them together to make one giant coral. Then I hide some kibble in the gaps for Miki to find.
 
 This game was the most challenging. Not that it was hard but rather the most time consuming.
 
