--- a/en/brain-games/_posts/2015-07-20-dvd-case.md
+++ b/en/brain-games/_posts/2015-07-20-dvd-case.md
@@ -11,7 +11,7 @@ redirect_from:
 
 For this one you only need an empty DVD case and some treats that fits in the case.
 
-I have put some grated cheese or just kibbles in it. I also cut off the plastic cover holder, because it seemed sharp (Miki could have cut his mouth with it). 
+I have put some grated cheese or just kibble in it. I also cut off the plastic cover holder, because it seemed sharp (Miki could have cut his mouth with it).
 
 It took Miki about one and a half minutes to get the case open.
 
