--- a/en/brain-games/_posts/2015-07-20-stand.md
+++ b/en/brain-games/_posts/2015-07-20-stand.md
@@ -15,7 +15,7 @@ You need to select only those objects that you allow your dog to climb on or to 
 
 The idea is that the dog needs to figure out how to get the treats that he doesn't reach right away and maybe do some balancing exersizes at the same time. If the stand isn't stable, you can put it against a wall or you can hold on to it.
 
-We started playing this game with lower stands so that the tasks wouldn't be too hard. I gradually made the stands taller by changing the boxes. You can put the kibbles or treats directly on top the stand or you can put small tasks on top of it, like [ice cube trays](/en/brain-games/ice-cube-trays/) or a [trivet](/en/brain-games/trivet/).
+We started playing this game with lower stands so that the tasks wouldn't be too hard. I gradually made the stands taller by changing the boxes. You can put the kibble or treats directly on top the stand or you can put small tasks on top of it, like [ice cube trays](/en/brain-games/ice-cube-trays/) or a [trivet](/en/brain-games/trivet/).
 
 ---
 
