--- a/en/brain-games/_posts/2015-07-20-waiting.md
+++ b/en/brain-games/_posts/2015-07-20-waiting.md
@@ -11,7 +11,7 @@ redirect_from:
 
 Waiting can be so hard for some dogs.
 
-At the moment Miki is able to wait while I put the kibbles or other treats on his feet when he is lying down. Miki can eat the treats only when I give him the permission.
+At the moment Miki is able to wait while I put the kibble or other treats on his feet when he is lying down. Miki can eat the treats only when I give him the permission.
 
 It would be so cool to someday put the treat on his nose while he waits the permission to eat it.
 
