--- a/en/brain-games/_posts/2015-07-20-yarn-box.md
+++ b/en/brain-games/_posts/2015-07-20-yarn-box.md
@@ -11,9 +11,9 @@ redirect_from:
 
 This yarn box is one diy version of a slow feeding food bowl.
 
-For this one you need a cardboard box, masking tape, some yarn, scissors, a needle and any treats or kibbles.
+For this one you need a cardboard box, masking tape, some yarn, scissors, a needle and any treats or kibble.
 
-I chose a shoe box and I put one round of masking tape around it to make it stronger. Then I punched several holes at different heights with scissors on both sides of the box. After this I wired many rounds of yarn with a needle through these holes I made, and finally secured it with knots. I used about 5 meters (16 feet) of yarn altogether. 
+I chose a shoe box and I put one round of masking tape around it to make it stronger. Then I punched several holes at different heights with scissors on both sides of the box. After this I wired many rounds of yarn with a needle through these holes I made, and finally secured it with knots. I used about 5 meters (16 feet) of yarn altogether.
 
 After this I put three empty treat tubes and two small soda bottles as obstacles to the bottom of the box. But you can use any obstacles you want for example tennis balls, empty paper rolls, paper balls etc. The obstacles need to be soft or rounded, so the dog doesn’t hurt his nose while plowing in the box.
 
@@ -21,7 +21,7 @@ It took Miki about 2 to 3 minutes to find a small handful of treats.
 
 It took me about ten minutes to craft this box, but the box is reusable and it seems to be durable too.
 
-You can do a similar game with less effort, by using a plastic basket which already has holes in it. I used an old t-shirt for this one which I had cut into a long string and I wired it through the basket. Look at the last pictures. We also played this game with an ice cube tray. I placed the ice cube tray on the bottom of the basket and then I sprinkled some kibbles on top of it.
+You can do a similar game with less effort, by using a plastic basket which already has holes in it. I used an old t-shirt for this one which I had cut into a long string and I wired it through the basket. Look at the last pictures. We also played this game with an ice cube tray. I placed the ice cube tray on the bottom of the basket and then I sprinkled some kibble on top of it.
 
 ---
 
