--- a/valokuvaus/luontokuvat/syksy/_posts/2015-07-14-00094.md
+++ b/valokuvaus/luontokuvat/syksy/_posts/2015-07-14-00094.md
@@ -2,21 +2,21 @@
 layout: page
 image:
   feature:
-  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAB1hbc_7GDnO39ptDM0E0N9a/luontokuvat/syksy/4/DS61182-245px.jpg
+  teaser: https://b2.minimuutti.com/file/minimuutti-com/luontokuvat/syksy/4/DS61182-245px.jpg
   thumb:
 
 ---
 
-[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAS0klTzP37QLuy-magUpCsa/luontokuvat/syksy/4/DS60861-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADraheHEBevBj9OV27i5xina/luontokuvat/syksy/4/DS60861.jpg)
+[![](https://b2.minimuutti.com/file/minimuutti-com/luontokuvat/syksy/4/DS60861-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADraheHEBevBj9OV27i5xina/luontokuvat/syksy/4/DS60861.jpg)
 
-[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABFsgI3-3WvtSiOm2Kixh9Ga/luontokuvat/syksy/4/DS60889-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACUwJVUJoHvRcngVGaJmNvWa/luontokuvat/syksy/4/DS60889.jpg)
+[![](https://b2.minimuutti.com/file/minimuutti-com/luontokuvat/syksy/4/DS60889-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACUwJVUJoHvRcngVGaJmNvWa/luontokuvat/syksy/4/DS60889.jpg)
 
-[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABmF2V6b72ykp5ADfz-ZYsha/luontokuvat/syksy/4/DS60952-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADfO335c9HfiNQ5UbZQGxfYa/luontokuvat/syksy/4/DS60952.jpg)
+[![](https://b2.minimuutti.com/file/minimuutti-com/luontokuvat/syksy/4/DS60952-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADfO335c9HfiNQ5UbZQGxfYa/luontokuvat/syksy/4/DS60952.jpg)
 
-[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAWnadNFev9yUQmYtTLI8vAa/luontokuvat/syksy/4/DS60968-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADYK3jVsEecOZHKr324ipz-a/luontokuvat/syksy/4/DS60968.jpg)
+[![](https://b2.minimuutti.com/file/minimuutti-com/luontokuvat/syksy/4/DS60968-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADYK3jVsEecOZHKr324ipz-a/luontokuvat/syksy/4/DS60968.jpg)
 
-[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABk4RUBLKAZ21ZFYehWvNfna/luontokuvat/syksy/4/DS60974-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAu9XaqA2qFnbX-sdJJeb-ta/luontokuvat/syksy/4/DS60974.jpg)
+[![](https://b2.minimuutti.com/file/minimuutti-com/luontokuvat/syksy/4/DS60974-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAu9XaqA2qFnbX-sdJJeb-ta/luontokuvat/syksy/4/DS60974.jpg)
 
-[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABYEowdsfWFtlzu7HzB7_LNa/luontokuvat/syksy/4/DS61110-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABpOyy7f8BEmJwvrA-3AfZja/luontokuvat/syksy/4/DS61110.jpg)
+[![](https://b2.minimuutti.com/file/minimuutti-com/luontokuvat/syksy/4/DS61110-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABpOyy7f8BEmJwvrA-3AfZja/luontokuvat/syksy/4/DS61110.jpg)
 
-[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADl8v9d8alRNGWlArTenI6ja/luontokuvat/syksy/4/DS61182-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACtyUVN8KOBbH7NhzF0i7nka/luontokuvat/syksy/4/DS61182.jpg)
+[![](https://b2.minimuutti.com/file/minimuutti-com/luontokuvat/syksy/4/DS61182-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACtyUVN8KOBbH7NhzF0i7nka/luontokuvat/syksy/4/DS61182.jpg)
