--- a/blogi/_posts/2020-01-29-saannot.md
+++ b/blogi/_posts/2020-01-29-saannot.md
@@ -46,6 +46,12 @@ Mutta tässä muutama esimerkki:
 - Vinkuminen ja haukkuminen ovat varmoja tapoja jäädä ilman ruokaa ja huomiota
 - Vieraita tervehditään kaikki tassut maassa. Pentuna Miki hyppi ihmisiä vasten tervehtiessään heitä, mutta kun se käytös jätettiin huomiotta, niin nyt tassut pysyvät maassa
 
+Kun leikkasin fleeceä [hyväntekeväisyys fleecemattoja](https://minimuutti.com/blogi/joulutervehdys/) varten, niin Miki halusi osallistua ja seurata mitä minä teen. En kuitenkaan halunnut, että Miki tulee kävelemään kankaan päälle jota leikkasin. Siispä loin säännön, että kun kangas on lattialla, ei huoneeseen saa tulla.
+
+Alla on vielä pari kuvaa, kun Miki noudattaa sääntöä ja seuraa tapahtumia ovelta.
+
+ ![](https://b2.minimuutti.com/file/minimuutti-com/blogi/rules1.jpg)
+
 #### Luo koiralle aina mahdollisuudet onnistua
 
 Ajattele aina ensin, minkälaisen käytösmallin haluat luoda. Yritä ajatella sitä myös koirasi näkökulmasta ja yritä järjestää koiralle sellaisia tilanteita, joissa se onnistuu, eikä epäonnistu.
