--- a/en/brain-games/_posts/2015-07-20-lids.md
+++ b/en/brain-games/_posts/2015-07-20-lids.md
@@ -43,6 +43,6 @@ When I put two treats under a plastic container's lid, it took Miki about a minu
 
 ![](https://b2.minimuutti.com/file/minimuutti-com/aktivointi/kannet/DSC56302-800px.jpg)
 
-Once when we played the game with a plastic container's lid about 15 minutes, the result was this :)
+Once when we played the game with a plastic container's lid about 15 minutes, the result was this:
 
 ![](https://b2.minimuutti.com/file/minimuutti-com/aktivointi/kannet/DSC56307-800px.jpg)
