--- a/en/brain-games/_posts/2015-07-20-stand.md
+++ b/en/brain-games/_posts/2015-07-20-stand.md
@@ -11,7 +11,7 @@ redirect_from:
 
 You can use any crate, drawer, table, chair or a cardboard box as a stand.
 
-You need to select only those objects that you allow your dog to climb on or to lean on anyway. I have used only cardboard boxes, because Miki doesn't have a permission to climb on any furniture. You may not want to put the treats onto the kitchen table, if you don't want to teach your dog to steal food from the table :D
+You need to select only those objects that you allow your dog to climb on or to lean on anyway. I have used only cardboard boxes, because Miki doesn't have a permission to climb on any furniture. You may not want to put the treats onto the kitchen table, if you don't want to teach your dog to steal food from the table.
 
 The idea is that the dog needs to figure out how to get the treats that he doesn't reach right away and maybe do some balancing exersizes at the same time. If the stand isn't stable, you can put it against a wall or you can hold on to it.
 
