--- a/valokuvaus/luontokuvat/kesa/_posts/2015-07-14-00145.md
+++ b/valokuvaus/luontokuvat/kesa/_posts/2015-07-14-00145.md
@@ -12,3 +12,5 @@ image:
 ![](https://b2.minimuutti.com/file/minimuutti-com/luontokuvat/kes%C3%A4/12/DS62396-800px.jpg)
 
 ![](https://b2.minimuutti.com/file/minimuutti-com/luontokuvat/kes%C3%A4/12/DS62397-800px.jpg)
+
+*Maitohorsma*
