--- a/en/brain-games/_posts/2015-07-20-ball-pool.md
+++ b/en/brain-games/_posts/2015-07-20-ball-pool.md
@@ -11,11 +11,11 @@ redirect_from:
 
 You can buy expensive ball pool balls from a toy store and pay a fortune, or you can improvise like I did.
 
-I bought a bag of water balloons and they cost me next to nothing :)
+I bought a bag of water balloons and they cost me next to nothing.
 
 I filled less than 100 balloons with air by using a bicycle pump and put them in a box as a ball pool. Then I sprinkled some kibble in there and asked Miki to search.
 
-Miki loved these balloons so much that he offered me the meercat trick as a compensation in order to get one of those balloons to play with, when I started to fill them :)
+Miki loved these balloons very much and he wanted one of those balloons to play with, when I started to fill them.
 
 Later on we got a chance to try this with real ball pool balls. Miki seemed to love them as much as the balloons.
 
@@ -34,7 +34,3 @@ Later on we got a chance to try this with real ball pool balls. Miki seemed to l
 ![](https://b2.minimuutti.com/file/minimuutti-com/aktivointi/pallomeri/DS01899-800px.jpg)
 
 ![](https://b2.minimuutti.com/file/minimuutti-com/aktivointi/pallomeri/DS01881-800px.jpg)
-
-Picture about the meercat trick
-
-![](https://b2.minimuutti.com/file/minimuutti-com/temput/1/DSC31982-800px.jpg)
