--- a/valokuvaus/luontokuvat/kesa/_posts/2015-07-14-00032.md
+++ b/valokuvaus/luontokuvat/kesa/_posts/2015-07-14-00032.md
@@ -2,10 +2,9 @@
 layout: page
 image:
   feature:
-  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAONZbnEqXB8IAP1UD-kCUua/luontokuvat/kes%C3%A4/5/DS24185-245px%20%282%29.jpg
+  teaser: https://b2.minimuutti.com/file/minimuutti-com/luontokuvat/kes%C3%A4/5/DS24185-245px%20%282%29.jpg
   thumb:
-redirect_from:
-  - /luontokuvat/kesa/00032
+
 ---
 
 ![](https://b2.minimuutti.com/file/minimuutti-com/luontokuvat/kes%C3%A4/5/DS24185-800px.jpg)
@@ -14,11 +13,7 @@ redirect_from:
 
 ![](https://b2.minimuutti.com/file/minimuutti-com/luontokuvat/kes%C3%A4/6/DS25825-800px.jpg)
 
-![](https://b2.minimuutti.com/file/minimuutti-com/luontokuvat/kes%C3%A4/8/DS32245-800px.jpg)
-
 ![](https://b2.minimuutti.com/file/minimuutti-com/luontokuvat/kes%C3%A4/8/DS32249-800px.jpg)
-
-![](https://b2.minimuutti.com/file/minimuutti-com/luontokuvat/kes%C3%A4/8/DS62932-800px.jpg)
 
 ![](https://b2.minimuutti.com/file/minimuutti-com/luontokuvat/kes%C3%A4/12/DS58919-800px.jpg)
 
@@ -28,6 +23,8 @@ redirect_from:
 
 ![](https://b2.minimuutti.com/file/minimuutti-com/luontokuvat/kes%C3%A4/6/DS25765-800px.jpg)
 
+![](https://b2.minimuutti.com/file/minimuutti-com/luontokuvat/kes%C3%A4/13/DS673661-800px.jpg)
+
 ![](https://b2.minimuutti.com/file/minimuutti-com/luontokuvat/kes%C3%A4/7/DS28295-800px.jpg)
 
 ![](https://b2.minimuutti.com/file/minimuutti-com/luontokuvat/kes%C3%A4/8/DS32980-800px.jpg)
@@ -35,3 +32,5 @@ redirect_from:
 ![](https://b2.minimuutti.com/file/minimuutti-com/luontokuvat/kes%C3%A4/8/DS32993-800px.jpg)
 
 *Kukkia ja mehiläisiä*
+
+
