--- a/en/brain-games/_posts/2015-07-20-ball-pool.md
+++ b/en/brain-games/_posts/2015-07-20-ball-pool.md
@@ -19,8 +19,6 @@ Miki loved these balloons very much and he wanted one of those balloons to play 
 
 Later on we got a chance to try this with real ball pool balls. Miki seemed to love them as much as the balloons.
 
----
-
 ![](https://b2.minimuutti.com/file/minimuutti-com/aktivointi/pallomeri/DSC39227-800px.jpg)
 
 ![](https://b2.minimuutti.com/file/minimuutti-com/aktivointi/pallomeri/DSC39252-800px.jpg)
@@ -34,3 +32,11 @@ Later on we got a chance to try this with real ball pool balls. Miki seemed to l
 ![](https://b2.minimuutti.com/file/minimuutti-com/aktivointi/pallomeri/DS01899-800px.jpg)
 
 ![](https://b2.minimuutti.com/file/minimuutti-com/aktivointi/pallomeri/DS01881-800px.jpg)
+
+You can alter the game is you replace some of the balls with hollow laundry balls. Just remember to clean them properly before you them to your dog.
+
+![](https://b2.minimuutti.com/file/minimuutti-com/aktivointi/pesupallot/DS69301-800px.jpg)
+
+![](https://b2.minimuutti.com/file/minimuutti-com/aktivointi/pesupallot/DS69309-800px.jpg)
+
+---
