--- a/en/photography/finnish-nature/summer/_posts/2015-07-14-00101.md
+++ b/en/photography/finnish-nature/summer/_posts/2015-07-14-00101.md
@@ -2,7 +2,7 @@
 layout: page
 image:
   feature:
-  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABxcoXO7NHE6Q52XTaZvs0_a/luontokuvat/kes%C3%A4/5/DS24849-245px%20%282%29.jpg
+  teaser: https://b2.minimuutti.com/file/minimuutti-com/luontokuvat/kes%C3%A4/5/DS24849-245px (2).jpg
   thumb:
 redirect_from:
   - /en/pictures-of-finnish-nature/summer/00101/
