--- a/blogi/_posts/2020-01-29-saannot.md
+++ b/blogi/_posts/2020-01-29-saannot.md
@@ -48,7 +48,7 @@ Mutta tässä muutama esimerkki:
 
 Kun leikkasin fleeceä [hyväntekeväisyys fleecemattoja](https://minimuutti.com/blogi/joulutervehdys/) varten, niin Miki halusi osallistua ja seurata mitä minä teen. En kuitenkaan halunnut, että Miki tulee kävelemään kankaan päälle jota leikkasin. Siispä loin säännön, että kun kangas on lattialla, ei huoneeseen saa tulla.
 
-Alla on vielä pari kuvaa, kun Miki noudattaa sääntöä ja seuraa tapahtumia ovelta.
+Alla on vielä pari kuvaa, kun Miki hienosti noudattaa sääntöä ja seuraa tapahtumia ovelta.
 
 ![](https://b2.minimuutti.com/file/minimuutti-com/blogi/rules1.jpg)
 
@@ -59,6 +59,8 @@ Ajattele aina ensin, minkälaisen käytösmallin haluat luoda. Yritä ajatella s
 Jos koiralle ei vaikkapa ole vielä opetettu sitä, että ihmisten lautaselta ei saa varastaa ruokaa, niin pidä huoli siitä, ettei koiran ulottuville jää vartioimatonta ruokaa, kunnes asia on opetettu koirallesi. Tai jos opetat koiraasi ohittamaan lattialla olevaa ruokaa, niin lattialle kannattaa laittaa jotain vähempiarvoista ruokaa, joka on suht helppoa ohittaa.
 
 Tai jos vaikka haluat, että koirasi istuu eteisessä, kun olette lähdössä ulos, niin eteisen lattialle ei kannatta laittaa muovipiikkistä kuramattoa, koska sellaisen päällä ei varmaan ole mukavaa istua.
+
+Toisinpäin ajateltuna, jos tiedät, että koirasi ei sillä hetkellä "ole kuulolla", koira on vaikkapa keskittynyt syömään herkkuluuta, niin koiraa ei kannata sillä hetkellä pyytää tekemään jotain muuta, jos tiedät ettei koirasi aio totella.
 
 #### Palkitse vain oikeasta käytöksestä
 
@@ -102,7 +104,7 @@ Jos esimerkiksi on luotu sääntö, ettei koira saa mennä sohvalle, niin se ei 
 
 Koira menee takuuvarmasti hämilleen, jos sohvalle meno on "sallittua" tänään, koska on vieraita kylässä jotka haluavat rapsuttaa koiraa, mutta kiellettyä huomenna, kun olette vain perheen kesken.
 
-Ja mikäli taloudessa on useampia koiria, niin pitää aina muistaa olla reilu kaikkia koiria kohtaan. Reiluudella tarkoitan sitä, että kaikilla koirilla on samat säännöt. Jos esimerkiksi vain talouden pienimmällä koiralla on oikeus tulla sohvalle, mutta muilla ei ole, niin se aiheuttaa vain kateutta ja sekaannusta muissa koirissa. Ajatellaan esimerkkinä vaikkapa lapsia. Heistä kumpikin käyttäytyy kauppareissulla hyvin, mutta vain toinen saa valita lelun kaupasta. Epäreiluus ei palvele ketään, koska on melko varmaa, että toinen tuntee vihaa ja kateutta, koska jäi ilman.
+Ja mikäli taloudessa on useampia koiria, niin pitää aina muistaa olla reilu kaikkia koiria kohtaan. Reiluudella tarkoitan sitä, että kaikilla koirilla on samat säännöt. Jos esimerkiksi vain talouden pienimmällä koiralla on oikeus tulla sohvalle, mutta muilla ei ole, niin se aiheuttaa vain kateutta ja sekaannusta muissa koirissa. Ajatellaan esimerkkinä perhettä, jossa on kaksi lasta. Heistä kumpikin käyttäytyy kauppareissulla hyvin, mutta vain toinen saa valita lelun kaupasta. Epäreiluus ei palvele ketään, koska on melko varmaa, että toinen tuntee vihaa ja kateutta, koska jäi ilman.
 
 Jokaisella meistä on huonoja päiviä eikä sääntöjä jaksaisi noudattaa, mutta jos lipeät säännöstä "vain tänään kun väsyttää" niin kylläpä koirasi ensi kerralla ihmettelee miksei saa haluamaansa asiaa ei-toivotulla käytöksellä kun sai viimeksikin ja melko varmasti kuitenkin tarjoaa sitä, eikä sitä haluttua käytöstä.
 
