--- a/blogi/_posts/2020-01-29-saannot.md
+++ b/blogi/_posts/2020-01-29-saannot.md
@@ -60,7 +60,8 @@ Jos koiralle ei vaikkapa ole vielä opetettu sitä, että ihmisten lautaselta ei
 
 Tai jos vaikka haluat, että koirasi istuu eteisessä, kun olette lähdössä ulos, niin eteisen lattialle ei kannatta laittaa muovipiikkistä kuramattoa, koska sellaisen päällä ei varmaan ole mukavaa istua.
 
-Toisinpäin ajateltuna, jos tiedät, että koirasi ei sillä hetkellä "ole kuulolla", koira on vaikkapa keskittynyt syömään herkkuluuta, niin koiraa ei kannata sillä hetkellä pyytää tekemään jotain muuta, jos tiedät ettei koirasi aio totella.
+Toisinpäin ajateltuna, jos tiedät, että koirasi ei sillä hetkellä "ole kuulolla", koira on vaikkapa keskittynyt pureksimaan herkkuluuta, niin koiraa ei kannata sillä hetkellä pyytää tekemään vaikkapa jotain opettamaasi temppua. Jos tiedät, ettei koirasi aio totella, vaan se on keskittynyt herkutteluun, niin parempi olla sillä hetkellä pyytämättä mitään, ettei tule vahvistaneeksi tottelemattomuutta.
+
 
 #### Palkitse vain oikeasta käytöksestä
 
