--- a/en/brain-games/_posts/2015-07-20-coral-mat.md
+++ b/en/brain-games/_posts/2015-07-20-coral-mat.md
@@ -13,7 +13,7 @@ You can learn how to crochet corals in [here](/en/brain-games/corals/). I use th
 
 Miki loves nothing more than to search his kibble dinner among corals. It takes some effort to crochet this many corals but I still recommend doing this. Sniffing and searching are important factors in dog's well-being and these mats have really enriched Miki's life.
 
-I used 85 corals to this mat but the quantity depends on the size of the towel you are using. My towel was 30x50cm. I recon that for small dogs only half of that size is enough.
+I used 85 corals to this mat but the quantity depends on the size of the towel you are using. My towel was 30x50cm. I reckon that for small dogs only half of that size is enough.
 
 First time I gave this to Miki I sprinkled the kibble on top of the mat so they were easy to find. Later on I hid the kibble inside the corals.
 
