--- a/en/brain-games/_posts/2015-07-20-towels.md
+++ b/en/brain-games/_posts/2015-07-20-towels.md
@@ -29,7 +29,7 @@ You can make this exercise harder by replacing the towel with bigger one. Or you
 
 You can roll the towel and then tie it to a knot or two.
 
-I usually put one to five treats each time. You should use any dry and hard treats, like pieces of dried chicken fillets. I have tried some soft treats (like a wiener) for this one. But when I put soft treats, Miki doesn’t open the knots to get the treat, but instead drools the spot wet where the wiener is and then sucks it through the towel. And when you use dry treats you don’t need to wash the towel each time.
+I usually put one to five treats each time. You should use any dry and hard treats, like pieces of dried chicken fillets. I have tried some soft treats (like a hot dog) for this one. But when I put soft treats, Miki doesn’t open the knots to get the treat, but instead drools the spot wet where the a hot dog is and then sucks it through the towel. And when you use dry treats you don’t need to wash the towel each time.
 
 It takes Miki 5 minutes to open a knotted towel and about 10 to 15 minutes a double knotted towel.
 
