--- a/en/brain-games/_posts/2015-07-20-toy-hunt.md
+++ b/en/brain-games/_posts/2015-07-20-toy-hunt.md
@@ -9,7 +9,7 @@ redirect_from:
   - /en/activation/toy-hunt/
 ---
 
-You can make a similar game as the easter egg hunt by hiding some food puzzle toys for your dog.
+You can make a similar game as the Easter egg hunt by hiding some food puzzle toys for your dog.
 
 Instead of just giving a food puzzle toy filled with kibble to your dog you can increase the challenge and hide the toy first while your dog waits in some other room.
 
