--- a/en/brain-games/_posts/2015-07-20-trivet.md
+++ b/en/brain-games/_posts/2015-07-20-trivet.md
@@ -10,11 +10,11 @@ redirect_from:
   - /en/activation/trivet/
 ---
 
-Trivets work well as slow feedind bowls.
+Trivets work well as slow feeding bowls.
 
-You can use any kind of trivets, grills or grids for this one. But you may want to give this to your dog on the same day you are about to clean the trivet anyway. A dooled trivet isn't nice or hygienic anymore to be used in the kitchen.
+You can use any kind of trivets, grills or grids for this one. But you may want to give this to your dog on the same day you are about to clean the trivet anyway. A drooled trivet isn't nice or hygienic any more to be used in the kitchen.
 
-I put the trivet on the floor and sprinkled some treats in the gaps. That game was way too easy for Miki. At the second time I put some kids' building blocks as obstables in between the gaps, but it was still too easy. 15 pieces of treats vanished in about 30 seconds.
+I put the trivet on the floor and sprinkled some treats in the gaps. That game was way too easy for Miki. At the second time I put some kids' building blocks as obstacles in between the gaps, but it was still too easy. 15 pieces of treats vanished in about 30 seconds.
 
 At the third time I wired about 3 meters (10 feet) long string of fabric to it and secured it with knots. I have cut old t-shirts to make these strings, but you can use any fabric like old sheets and towels or yarn. This time it took Miki 1-2 minutes to eat all the treats.
 
