--- a/en/treat-dispensers/_posts/2015-07-12-kong-gyro.md
+++ b/en/treat-dispensers/_posts/2015-07-12-kong-gyro.md
@@ -19,7 +19,7 @@ At first I was very pleased with this toy. It gave some challenge to Miki, it di
 
 While Miki was working on the toy he bit the toy a couple of times and I noticed there were severe bite marks on the toy. I was a bit confused and disappointed, because I've accustomed to the Kong company's durable toys. Usually Kong company's toys last years but I'm not so sure about this one.
 
-Fortynately Miki doesn't usually chew on his toys, although he may bite his new toys a couple of times while he's trying to figure out how they work. This toy might be able to withstand Miki's handling, but if your dog tends to chew on his toys you really should skip this one.
+Fortunately Miki doesn't usually chew on his toys, although he may bite his new toys a couple of times while he's trying to figure out how they work. This toy might be able to withstand Miki's handling, but if your dog tends to chew on his toys you really should skip this one.
 
 The idea of the toy is very good but it lacks durability.
 
